--- a/frontend/pong.html
+++ b/frontend/pong.html
@@ -38,6 +38,6 @@
     <h1 id="player1Score">0</h1>
     <h1 id ="player2Score">0</h1>
     <canvas id="pongCanvas" width="1280" height="720" style="background: #1b1b1b;"></canvas>
-    <script type="module" src="scripts/game/game.js"></script>
+    <script type="module" src="scripts/game/pong.js"></script>
 </body>
 </html>
