--- a/frontend/pong.html
+++ b/frontend/pong.html
@@ -37,7 +37,7 @@
     <h1>Pong Game</h1>
     <h1 id="player1Score">0</h1>
     <h1 id ="player2Score">0</h1>
-    <canvas id="pongCanvas" width="1280" height="720" style="background: #1b1b1b;"></canvas>
+    <canvas id="pongCanvas" style="background: #1b1b1b;"></canvas>
     <script type="module" src="scripts/game/pong.js"></script>
 </body>
 </html>
