added basic Login dialog box

--- a/frontend/test.html
+++ b/frontend/test.html
@@ -3,35 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+<!-- TODO: ADD THIS IN INDEX.HMTL -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Puritan:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <style>
   body {
-    background: dimgray;
+      background: dimgray;
+      height: 100%;
   }
 </style>
 <body>
-  console
+    <button id="open-modal-button">Open Modal</button>
+    <auth-dialog id="auth-dialog"></auth-dialog>
 </body>
+<script src="src/components/auth-dialog.js"></script>
 <script>
-  fetch("http://127.0.0.1:8000/api/auth/login/", {
-      method: "POST",
-      headers: {
-          "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-          "username": "conrad6",
-          "email": "conrad@example.com",
-          "password": "password123"
-    })
-  }).then((response) => {
-      if (response.ok) {
-            return response.json();
-      } else {
-          throw new Error("Something wrong with api");
-      }
-  }).then((data) => {
-      console.log(data);
-  }).catch(err => console.log(err));
+
+    const openModalButton = document.getElementById("open-modal-button");
+	const authDialog = document.getElementById("auth-dialog");
+
+	openModalButton.addEventListener("click", () => {
+		authDialog.open();
+	});
+
+    document.getElementById('open-modal-button').addEventListener('click', () => {
+        const authDialog = document.querySelector('auth-dialog');
+        authDialog.dispatchEvent(new Event('open-dialog'));
+    });
+
+
+
+
+
+
+
+
+
+
+  // fetch("http://127.0.0.1:8000/api/auth/login/", {
+  //     method: "POST",
+  //     headers: {
+  //         "Content-Type": "application/json"
+  //     },
+  //     body: JSON.stringify({
+  //         "username": "conrad6",
+  //         "email": "conrad@example.com",
+  //         "password": "password123"
+  //   })
+  // }).then((response) => {
+  //     if (response.ok) {
+  //           return response.json();
+  //     } else {
+  //         throw new Error("Something wrong with api");
+  //     }
+  // }).then((data) => {
+  //     console.log(data);
+  // }).catch(err => console.log(err));
 
 </script>
 </html>
