added script to automatically refresh the access token for the user.

--- a/frontend/test.html
+++ b/frontend/test.html
@@ -19,6 +19,7 @@
     <button id="open-modal-button">Open Modal</button>
     <auth-dialog id="auth-dialog"></auth-dialog>
 </body>
+<script src="scripts/main.js"></script>
 <script src="src/components/auth-dialog.js"></script>
 <script>
 
