--- a/frontend/pong.html
+++ b/frontend/pong.html
@@ -6,7 +6,7 @@
     <title>Pong Game</title>
     <link rel="stylesheet" href="styles/game/game.css">
 </head>
-<script type="module" src="scripts/main.js"></script>
+<script type="module" src="scripts/api/api.js"></script>
 <script type="module" src="scripts/game/pong.js"></script>
 <body>
     <div id="menu" class="overlay hidden">
