--- a/frontend/test.html
+++ b/frontend/test.html
@@ -19,8 +19,8 @@
     <button id="open-modal-button">Open Modal</button>
     <auth-dialog id="auth-dialog"></auth-dialog>
 </body>
-<script type="module" src="scripts/main.js"></script>
-<script type="module" src="src/components/auth-dialog.js"></script>
+<script type="module" src="scripts/api/api.js"></script>
+<script type="module" src="scripts/auth-dialog.js"></script>
 <script>
 
     const openModalButton = document.getElementById("open-modal-button");
