--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,39 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PONG</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles/style.css">
-
-  <script src="scripts/main.js" defer type="module"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pong Game</title>
+    <link rel="stylesheet" href="styles/game/game.css">
 </head>
+<script type="module" src="scripts/api/api.js"></script>
+<script type="module" src="scripts/game/pong.js"></script>
 <body>
-<!--  <header>PONG</header>-->
-<!--  <main-menu>-->
-<!--    <canvas id="gameCanvas"></canvas>-->
-<!--    <left-menu>-->
-<!--      <div class="menu-option"><button>HowTo</button><span class="button-description">What is this?</span></div>-->
-<!--      <div class="menu-option"><button>Play</button><span class="button-description">How would you like your PONG today?</span></div>-->
-<!--      <div class="menu-option"><button>Tournament</button><span class="button-description">Will you dare?!</span></div>-->
-<!--      <div class="menu-option"><button>Leaderboard</button><span class="button-description">Lets find out who is the best!</span></div>-->
-<!--      <div class="menu-option" style="grid-row-start: 5;"><button>About</button><span class="button-description">ft_transcendence at 42 Heilbronn</span></div>-->
-<!--      &lt;!&ndash; <div class="menu-option"><button>Account</button><span class="button-description">Who are you anyway?</span></div> &ndash;&gt;-->
-<!--    </left-menu>-->
-<!--    <right-menu>-->
-<!--      <div id="right-menu-container"></div> &lt;!&ndash; Container for dynamic content &ndash;&gt;-->
-<!--    </right-menu>-->
-<!--  </main-menu>-->
-<!--  <footer></footer>-->
-<!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>-->
-<!--  <script src="js/canva.js"></script>-->
-
-  <a href="/">/</a>
-  <a href="/profile">profile</a>
-  <a href="/about">about</a>
-  <div id="content"></div>
-
-  <script src="scripts/router.js"></script>
+    <div id="menu" class="overlay hidden">
+        MENU COMPONENT
+    </div>
+    <h1>Pong Game</h1>
+    <h1 id="player1Score">0</h1>
+    <h1 id ="player2Score">0</h1>
+    <canvas id="pongCanvas" style="background: #1b1b1b;"></canvas>
 </body>
 </html>
