--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong Game</title>
     <link rel="stylesheet" href="styles/game/game.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<script type="module" src="scripts/api/api.js"></script>
-<script type="module" src="scripts/game/pong.js"></script>
 <body>
     <div id="menu" class="overlay hidden">
         MENU COMPONENT
     </div>
-    <h1>Pong Game</h1>
     <h1 id="player1Score">0</h1>
     <h1 id ="player2Score">0</h1>
-    <canvas id="pongCanvas" style="background: #1b1b1b;"></canvas>
+    <canvas id="pongCanvas"></canvas>
 </body>
+<script type="module" src="scripts/api/api.js"></script>
+<script type="module" src="scripts/game/pong.js"></script>
 </html>
