--- a/frontend/test.html
+++ b/frontend/test.html
@@ -20,7 +20,7 @@
     <auth-dialog id="auth-dialog"></auth-dialog>
 </body>
 <script type="module" src="scripts/api/api.js"></script>
-<script type="module" src="scripts/auth-dialog.js"></script>
+<script type="module" src="scripts/pages/components/auth-dialog.js"></script>
 <script>
 
     const openModalButton = document.getElementById("open-modal-button");
