--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PONG</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Puritan:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<!--  <link rel="stylesheet" href="styles/main.css">-->
   <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/main.js" defer type="module"></script>
 </head>
