added border to menu popup

--- a/frontend/pong.html
+++ b/frontend/pong.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="menu" class="overlay hidden">
+    <div id="menu" style="border: solid 1px white;" class="overlay hidden">
         MENU COMPONENT
     </div>
     <h1 id="player1Score">0</h1>
